--- a/code-snippets/Day3/flexbox/styles.css
+++ b/code-snippets/Day3/flexbox/styles.css
@@ -43,3 +43,61 @@ body {
     display: flex;
     justify-content: space-between;
 }
+
+.center-div {
+    height: 300px;
+    background-color: rgb(195, 23, 132);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-direction {
+    height: 150px;
+    background-color: rgb(195, 78, 23);
+    display: flex;
+    justify-content: center;
+    flex-direction: row-reverse;
+}
+
+.flex-direction2 {
+    height: 300px;
+    background-color: rgb(195, 169, 23);
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+}
+
+.flex-direction2 {
+    height: 800px;
+    background-color: rgb(23, 189, 195);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.flex-direction3 {
+    height: 800px;
+    background-color: rgb(89, 23, 195);
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+}
+
+.order {
+    height: 300px;
+    background-color: rgb(195, 23, 78);
+    display: flex;
+}
+
+.c3 {
+    order: -2;
+}
+
+.c1 {
+    order: 1;
+}
+
+.c2 {
+    align-self: flex-end;
+}
